# backend

./: .gitignore  CLAUDE.md  DEV_GUIDE.md  InspectionVPS.md  MCP_CONNECTOR_TEMPLATE.md  Makefile  README.devguide.md  README.md  README.root.md  docker-compose.yml  docker_clean_all.sh  redis_test.sh
.github/: README_CI_DEPLOY.md  README_SCRIPT_DEPLOY.md  deploy-vps.sh
.github/workflows/: deploy.yml
n8n-workflows/: AVATAR-UPLOAD-SETUP.md  PODCAST-UPLOAD-SETUP.md  baserow-upload-2-steps.md  baserow-upsert-logic.md  convert-to-binary-config.md  http-request-baserow-config.md  leraysi-webhook-pago-confirmado.json  n8n-expressions-reference.md  test-baserow-token.sh  upload-avatar-workflow.json  upload-baserow-single-function.js  validate-image-node.js  webhook-authentication-setup.md
nginx/: media.conf
repositories/Qdrant/: CLAUDE.md  README.qdrant.md
repositories/agents/leonobitech/: CLAUDE.md
repositories/agents/leraysi/: ANALYSIS_2026-02-03.md  CLAUDE.md
repositories/baserow/: CLAUDE.md  Dockerfile  README.md  start.sh
repositories/chatgpt-oauth/: .env.example  Dockerfile  README.md  package-lock.json  package.json
repositories/chatgpt-oauth/keys/: jwks.json
repositories/chatgpt-oauth/src/: index.ts
repositories/chatwoot/: .env.prod.template  CLAUDE.md  README.md
repositories/claude-oauth/: .env.example  CLAUDE_DESKTOP_SETUP.md  README.md  claude_desktop_config.example.json  package-lock.json  package.json
repositories/claude-oauth/src/: index.ts
repositories/core/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.core.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
repositories/core-v2/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
repositories/core-v2/blog-posts/: 01-why-rust-for-microservices.md  README.md
repositories/core-v2/docs/: ARCHITECTURE.md
repositories/core-v2/docs/ADR/: 001-database-layer-sqlx.md
repositories/core-v2/src/: lib.rs  main.rs
repositories/core-v2/src/application/: mod.rs
repositories/core-v2/src/config/: mod.rs
repositories/core-v2/src/domain/: mod.rs
repositories/core-v2/src/infrastructure/: mod.rs
repositories/core-v2/src/observability/: mod.rs
repositories/core-v2/src/presentation/: mod.rs
repositories/core-v2/src/presentation/http/: mod.rs
repositories/core-v2/src/utils/: mod.rs
repositories/core/docs/: PASSKEY_LOGIN_FLOW_CORRECTED.md  PASSKEY_SYSTEM_EXPLANATION.md  PASSKEY_VALIDATION_FELIX.md
repositories/core/prisma/: schema.prisma
repositories/core/src/: index.ts
repositories/leonobit/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  STREAMING_STT_ARCHITECTURE.md  STT_OPTIMIZATION_GUIDE.md  rustfmt.toml  ws-test-local.html
repositories/leonobit/src/: lib.rs  main.rs
repositories/leonobit/src/auth/: jwt.rs  mod.rs  types.rs  validate.rs
repositories/leonobit/src/config/: cors.rs  mod.rs  settings.rs
repositories/leonobit/src/core/: mod.rs
repositories/leonobit/src/core/audio/: mod.rs  opus.rs  resample.rs  stt.rs  whisper_worker.rs
repositories/leonobit/src/core/webrtc/: session.rs  transceiver.rs
repositories/leonobit/src/metrics/: metrics.rs  mod.rs  rtt.rs
repositories/leonobit/src/routes/: ai_health.rs  hello_routes.rs  leonobit.rs  mod.rs  webrtc.rs  webrtc_routes.rs
repositories/leonobit/src/routes/labs/: ai_pipeline.rs  lab01.rs  lab02.rs  lab03.rs  lab04.rs  lab05.rs  leonobit.rs  mod.rs  stats_helper.rs
repositories/leraysi-mcp/: .env.example  ARCHITECTURE.md  Dockerfile  INTERNAL-MCP-API.md  SETUP.md  TOOLS.md  check-odoo-env.sh  package-lock.json  package.json
repositories/leraysi-mcp/keys/: jwks.json
repositories/leraysi-mcp/public/: consent.html  login.html  register.html  register.html.bak  register.js
repositories/leraysi-mcp/types/: xmlrpc.d.ts
repositories/linkedin-mcp/: .env.example  CLAUDE_DESKTOP_SETUP.md  DEPLOYMENT.md  Dockerfile  LINKEDIN_HR_MVP_README.md  package-lock.json  package.json
repositories/linkedin-mcp/keys/: .gitignore  jwks.json
repositories/linkedin-mcp/src/: index.ts
repositories/livekit/: .env.example  .gitignore  generate-config.sh  livekit.yaml.template
repositories/n8n/: .env.example  CLAUDE.md  Dockerfile  README.n8n.md
repositories/n8n/patches/: prompt-caching-patch.js
repositories/n8n/workflows/: README-leraysi-pago.md  leraysi-webhook-pago-confirmado.json
repositories/odoo/: CLAUDE.md  Dockerfile  README.md
repositories/odoo-mcp/: .env.example  ARCHITECTURE.md  CLAUDE.md  Dockerfile  INTERNAL-MCP-API.md  README.md  SETUP.md  TODO-CONFIRMAR-PAGO-COMPLETO.md  TOOLS.md  claude_desktop_config.example.json  package-lock.json  package.json  test-odoo-tools.js  tsconfig.json  tsup.config.ts
repositories/odoo-mcp/keys/: jwks.json
repositories/odoo-mcp/prisma/: schema.prisma
repositories/odoo-mcp/public/: consent.html  consent.js  login.html  login.js  register.html  register.js  styles.css
repositories/odoo-mcp/src/: cli.ts  index.ts
repositories/odoo/config/: odoo.conf  patch_fonts.py
repositories/odoo/fonts/: Fontmap.local
repositories/piper-tts/: CLAUDE.md  Dockerfile  README.md  download_model.sh  server.py
repositories/redis/: .env.example  CLAUDE.md  REDIS_DB_USAGE.md
repositories/sales-agent/baserow-schema/: leads-table.csv
repositories/voice-agent/: .env.example  .gitignore  CLAUDE.md  Dockerfile  agent.py  bot.py  piper_tts_service.py  playground_server.py  pyproject.toml  tts_piper.py
repositories/voice-agent-3D/: .env.example  .env.local.example  CLAUDE.md  agent.py  playground.html  pyproject.toml  stt_whisper.py
repositories/voice-spike/: .gitignore  README.md  requirements.txt  server.py  server_rtc.py
repositories/wa-signature-proxy/: Dockerfile  server.js
scripts/: cleanup-orphan-files.sh
scripts/legacy/: CLAUDE.md  README.md  deploy.sh
security/: README_SEGURIDAD.md  README_VPS_MONITOR.md  vps-monitor
traefik/: README_ForwardAuth.md  SECURITY.md  traefik.yml
traefik/dynamic/: README.md  livekit.yaml  middlewares.yaml  router-protection.yaml  voice-bot.yaml
(+603 files in other folders)
