# 🦀 Cargo.toml
[package]
name = "leonobit"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
dashmap = "5"
chrono = { version = "0.4.41", features = ["clock"] }
hdrhistogram = "7.5.4"
axum-macros = "0.5.0"
dotenvy = "0.15.7"
webrtc = "0.13.0"
# Whisper STT
whisper-rs = "0.15.0"     # binding oficial para whisper.cpp
# OpenAI GPT-4o Realtime API
async-openai = "0.29.1"
# ElevenLabs Streaming API
reqwest = { version = "0.12.23", features = ["json", "stream"] }
