[tool.setuptools]
py-modules = ["bot"]

[project]
name = "voice-agent"
version = "2.0.0"
description = "Voice AI agent for Leonobitech - Pipecat + LiveKit + Deepgram + ElevenLabs + Claude"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[livekit,deepgram,anthropic,elevenlabs,silero]",
    "livekit-api>=1.0.5,<2",
    "aiohttp",
    "python-dotenv",
]

[project.scripts]
start = "bot:main"
