[tool.setuptools]
py-modules = ["agent"]

[project]
name = "voice-agent"
version = "0.2.0"
description = "Voice AI agent for Leonobitech - LiveKit + Gemini 3.1 Flash Live (native audio-to-audio)"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[mcp] @ git+https://github.com/leonobitech/agents.git@main#subdirectory=livekit-agents",
    "livekit-plugins-google @ git+https://github.com/leonobitech/agents.git@main#subdirectory=livekit-plugins/livekit-plugins-google",
    "python-dotenv",
]

[project.optional-dependencies]
legacy = [
    "livekit-plugins-deepgram~=1.5",
    "livekit-plugins-elevenlabs~=1.5",
    "livekit-plugins-turn-detector~=1.5",
    "livekit-agents[anthropic]~=1.5",
]

[project.scripts]
start = "agent:server"
